# ForgerAI

./: .dockerignore  .env.example  ENVIRONMENT.md  LICENSE  README.md  package-lock.json  package.json  turbo.json
apps/go-orchestrator/: Dockerfile  go.mod  go.sum
apps/go-orchestrator/cmd/: main.go
apps/java-enterprise/: Dockerfile  pom.xml
apps/node-realtime/: Dockerfile  package.json
apps/node-realtime/src/: broadcast.js  config.js  http.js  index.js  logger.js  mongo.js  nats.js  queue.js  redis.js  socket.js
apps/php-cms/: .dockerignore  .env.example  .gitignore  Dockerfile  composer.json
apps/php-cms/bootstrap/: app.php
apps/php-cms/config/: app.php  auth.php  cache.php  cors.php  database.php  filesystems.php  logging.php  queue.php  session.php
apps/php-cms/docker/: entrypoint.sh
apps/php-cms/public/: index.php
apps/php-cms/routes/: api.php  web.php
apps/python-ai/: Dockerfile  pyproject.toml  requirements.txt
apps/python-ai/app/: main.py  schemas.py
apps/ruby-workflow/: .dockerignore  Dockerfile  Gemfile  config.ru
apps/ruby-workflow/app/: workflow_app.rb
apps/ruby-workflow/config/: application.rb  puma.rb  routes.rb
apps/ruby-workflow/lib/: clients.rb  nats_subscriber.rb  (+1 more)
apps/rust-executor/: Cargo.toml  Dockerfile
apps/rust-executor/src/: config.rs  crypto.rs  db.rs  error.rs  main.rs  server.rs  state.rs  wasm_runtime.rs
apps/web/: package.json
docker/: Dockerfile.go  Dockerfile.java  Dockerfile.mongodb  Dockerfile.node  Dockerfile.php  Dockerfile.python  Dockerfile.ruby  Dockerfile.rust  Dockerfile.web  compose.yml
(+158 files in other folders)
