[package]
name = "rust-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
dotenvy = "0.15.7"
thiserror = "2.0.16"
mongodb = "3.3.0"
redis = { version = "0.32.5", features = ["tokio-comp"] }
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
base64 = "0.22.1"
rand = "0.9.2"
wasmtime = "37.0.2"
